Hopefully final check method edit. Check method search from principal root to principal leaf. Support method must be implemented

--- a/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
+++ b/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
@@ -620,7 +620,7 @@ Protože databáze Cellstore není plně funkční, nebylo možné implementaci 
 Sedna knihovna v Ruby poskytuje rozhraní pro databázi Sedna. Klient je Ruby rozšíření, které používá ovladač jazyka C, který je dodáván jako součást distribuce Sedna. To má být jednoduché a snadno použitelné. Ovšem zprovoznění knihovny Sedna neproběhlo tak hladce, jak se tvrdí.
 
 \subsection{eXist-db}
-eXist-db je open source systém pro správu databáze vytvořena pomocí technologie XML. Ukládá XML data podle datového modelu XML a nabízí efektivní a indexovaná XQuery zpracování. Podporuje velké množství technologií. Uvedu zde pouze ty, které se týkají Ruby ACL: XPath 2.0(odkaz), XQuery(odkaz), XML-RPC(odkaz), XQuery Update Facility 1.0(odkaz)
+eXist-db je open source systém pro správu databáze vytvořena pomocí technologie XML. Ukládá XML data podle datového modelu XML a nabízí efektivní a XQuery zpracování založené na indexování. Podporuje velké množství technologií. Uvedu zde pouze ty, které se týkají Ruby ACL: XPath 2.0(odkaz), XQuery(odkaz), XML-RPC(odkaz), XQuery Update Facility 1.0(odkaz)
 
 XML databáze eXist-db se podobá Cellstore a byla doporučena vedoucím práce jako ideální. Přesto proběhly komplikace s XUpdate navzdory přesné interpretace dokumentace.
 
